--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,5 @@ after_success:
     - echo username=keyi                               >> ~/.pypirc
     - echo password=$PYPI_PASSWORD                     >> ~/.pypirc
     - docker cp ~/.pypirc manylinux:/home/
-    # - docker exec -i manylinux bash -c 'cd jmapper && twine upload --config-file /home/.pypirc wheelhouse/*'
+    - docker exec -i manylinux bash -c 'cd jmapper && twine upload --config-file /home/.pypirc wheelhouse/*'
 
